<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:context=".MainActivity">

            <TextView
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/first_team_name"
                android:textSize="14sp"
                android:textColor="#616161"
                android:fontFamily="sans-serif-medium"/>

            <TextView
                android:id="@+id/team_A_score"
                android:layout_width="match_parent"
                android:layout_marginBottom="24dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/first_team_score"
                android:textSize="56sp"
                android:textColor="#000000"
                android:fontFamily="sans-serif-light"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:onClick="incThreePointsForFirstTeam"
                android:padding="15dp"
                android:text="@string/add_three_points_for_first_team" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:onClick="incTwoPointsForFirstTeam"
                android:padding="15dp"
                android:text="@string/add_two_points_for_first_team" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:onClick="incOnePointForFirstTeam"
                android:padding="15dp"
                android:text="@string/free_throw_for_first_team" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/darker_gray"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/second_team_name"
                android:textSize="14sp"
                android:textColor="#616161"
                android:fontFamily="sans-serif-medium"/>

            <TextView
                android:id="@+id/team_B_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/second_team_score"
                android:textSize="56sp"
                android:textColor="#000000"
                android:fontFamily="sans-serif-light"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:onClick="incThreePointsForSecondTeam"
                android:padding="15dp"
                android:text="@string/add_three_points_for_second_team"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:onClick="incTwoPointsForSecondTeam"
                android:padding="15dp"
                android:text="@string/add_two_points_for_second_team" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:onClick="incOnePointForSecondTeam"
                android:padding="15dp"
                android:text="@string/free_throw_for_second_team" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/reset_button"
        android:onClick="resetScore"
        android:layout_marginBottom="32dp"/>

</RelativeLayout>